# c-process-bridge

./: CMakeLists.txt  README.md
include/: process_bridge.h
src/: PB_generic_functions.c  PB_generic_functions.h  PB_life_management.c  PB_receive.c  PB_send.c  process_bridge.c  process_bridge.h
test/: CMakeLists.txt  child.c  test.c
